# CAS

./: CMakeLists.txt  README.md  TODO.md
lib/src/: main.cpp
lib/src/Exceptions/: UniversalStringException.h
lib/src/algstructures/: Integer.cpp  Natural.cpp  Natural.h  Polynom.cpp  Rational.cpp
lib/src/core/: README.md  TODO.md
lib/src/core/abstract/structures/: axioms.h  commuttative_algebra.h  factor.h  groups.h
lib/src/core/abstract/transformations/: mapping.h
lib/src/core/abstract/transformations/morphism/: homomorphism.h
lib/src/core/abstract/types/: integer.h  natural.h  polynom.h  rational.h
lib/src/core/operations/binary/: binary.h  natural.h
lib/src/core/realization/: README.md
lib/src/core/realization/Integer/: Z.h  operations.h
lib/src/core/realization/Natural/: N.h  operations.h
lib/src/core/realization/Polynomial/: P[x].h  operations.h
lib/src/core/realization/Rational/: Q.h  operations.h
lib/src/core/realization/deductionclass/: pZ.h  principal_ideal_z.h
lib/src/core/structures/: axioms.h  groups.h  rings.h
lib/src/core/transformations/morphism/: isomorphism.h
lib/src/core/transformations/operations/: binary.h  unary.h
lib/src/core/types/: nums.h
lib/src/old_core/: TODO.md
lib/src/old_core/operations/binary/: binary.h
lib/tests/core/: deductions_test.cpp  integer_test.cpp  natural_test.cpp  polynomial_test.cpp  rational_test.cpp
lib/tests/natural/: base_test.cpp  natural_test.cpp
lib/tests/polynom/: polynom_test.cpp
lib/tests/rational/: base2_test.cpp
